docs/versioned_docs/version-1.0/reference/python/elements.mdx
# Elements

## `Button`

**Class**

```python
Button(text: 'TextLike', action_id: 'str', url: 'str | None' = None, value: 'str | None' = None, style: 'ButtonStyle | ButtonStyleName | None' = None, confirm: 'ConfirmationDialogue | None' = None, accessibility_label: 'str | None' = None) -> 'None'
```

<div className="api-docstring">{"An interactive element that inserts a button. The button can be a\ntrigger for anything from opening a simple link to starting a complex\nworkflow.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#button>.\n\nArgs:\n    text: text on the button (plaintext only; max 75 chars).\n    action_id: an identifier so the source of the action can be known.\n    url: a URL to load in the user's browser when the button is clicked.\n    value: the value sent with the interaction payload.\n    style: the visual style of the button, one of `primary`, `danger`.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the button is clicked.\n    accessibility_label: a string label for longer descriptive text about\n        a button element. Used by screen readers (max 75 chars).\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `ChannelMultiSelectMenu`

**Class**

```python
ChannelMultiSelectMenu(action_id: 'str', initial_channels: 'list[str] | None' = None, confirm: 'ConfirmationDialogue | None' = None, max_selected_items: 'int | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"This interactive UI element allows users to select multiple channels visible\n    to the current user in the active workspace.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#channel_multi_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_channels: a list of conversation IDs as strings that will\n        already be selected when the menu renders.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the menu is used.\n    max_selected_items: the maximum number of items that can be selected\n        in the menu.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `ChannelSelectMenu`

**Class**

```python
ChannelSelectMenu(action_id: 'str', initial_channel: 'str | None' = None, confirm: 'ConfirmationDialogue | None' = None, response_url_enabled: 'bool | None' = False, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"A select menu interactive UI element, sourced with a list of public channels visible\n    to the current user.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#channels_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_channel: the single (string) user ID that will be initially selected\n        when first presented to the user.\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n    response_url_enabled: When set to true, the view_submission payload from the\n        menu's parent view will contain a response_url. (This response_url can be\n        used for message responses).\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `CheckboxGroup`

**Class**

```python
CheckboxGroup(action_id: 'str', options: 'Option | list[Option]', initial_options: 'Option | list[Option] | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False) -> 'None'
```

<div className="api-docstring">{"A checkbox group that allows a user to choose multiple items from a list\nof possible options.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#checkboxes>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    options: a list of\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) objects that will form\n        the content of the checkbox group.\n    initial_options: a list of\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) objects that will be\n        initially selected when first presented to the user.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the checkbox group is used.\n    focus_on_load: whether or not the checkbox group will be set to autofocus\n        within the view object.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `ConversationMultiSelectMenu`

**Class**

```python
ConversationMultiSelectMenu(action_id: 'str', initial_conversations: 'list[str] | None' = None, default_to_current_conversation: 'bool | None' = False, confirm: 'ConfirmationDialogue | None' = None, max_selected_items: 'int | None' = None, filter: 'ConversationFilter | None' = None, focus_on_load: 'bool | None' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"This interactive UI element allows users to select multiple conversations visible\n    to the current user in the active workspace.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#conversation_multi_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_conversations: a list of conversation IDs as strings that will\n        already be selected when the menu renders.\n    default_to_current_conversation: Pre-populates the select menu with the\n        conversation that the user was viewing when they opened the modal\n        (defaults to `False`).\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the menu is used.\n    max_selected_items: the maximum number of items that can be selected\n        in the menu.\n    filter: a [`Filter`](/slackblocks/latest/reference/objects/#objects.ConversationFilter)\n        object that filters out conversations that don't match the settings\n        of the filter.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `ConversationSelectMenu`

**Class**

```python
ConversationSelectMenu(action_id: 'str', initial_conversation: 'str | None' = None, default_to_current_conversation: 'bool | None' = False, confirm: 'ConfirmationDialogue | None' = None, response_url_enabled: 'bool | None' = False, filter: 'ConversationFilter | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"A select menu interactive UI element, sourced with a list of public and private channels,\n    DMs, and MPIMs visible to the current user.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#conversations_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_conversation: the single (string) conversation ID that will be initially\n        selected when first presented to the user.\n    default_to_current_conversation: Pre-populates the select menu with the\n        conversation that the user was viewing when they opened the modal\n        (defaults to `False`).\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n    response_url_enabled: When set to true, the view_submission payload from the\n        menu's parent view will contain a response_url. (This response_url can be\n        used for message responses).\n    filter: a [`Filter`](/slackblocks/latest/reference/objects/#objects.ConversationFilter)\n        object that filters out conversations that don't match the settings\n        of the filter.\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `DatePicker`

**Class**

```python
DatePicker(action_id: 'str', initial_date: 'str | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"Interactive element that allows users to select a date from a calendar.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#datepicker>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_date: the date (in `YYYY-MM-DD` format) that will appear on the\n        picker when it first renders.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the date picker is clicked.\n    focus_on_load: whether or not the date picker will be set to autofocus\n        within the view object.\n    placeholder: a `TextType.PLAINTEXT` `Text` object that defines what text\n        will initially appear on the picker.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `DateTimePicker`

**Class**

```python
DateTimePicker(action_id: 'str', initial_datetime: 'int | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False) -> 'None'
```

<div className="api-docstring">{"Allows users to select both a date and a time of day.\n\nProvides the date-time formatted as a Unix timestamp.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#datetimepicker>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_datetime: the initial value the date-time picker will be set to\n        when it first renders.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the button is date-time picker is used.\n    focus_on_load: whether or not the datetime picker will be set to autofocus\n        within the view object.\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `Element`

**Class**

```python
Element(type_: 'ElementType') -> 'None'
```

<div className="api-docstring">{"Basis element containing attributes and behaviour common to all elements.\nN.B: Element is an abstract class and cannot be used directly."}</div>

## `EmailInput`

**Class**

```python
EmailInput(action_id: 'str', initial_value: 'str | None' = None, dispatch_action_config: 'DispatchActionConfiguration | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"Allows user to enter an email into a single-line text field.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#email>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_value: The initial value in the email input when it is loaded.\n    dispatch_action_config: a `DispatchActionConfiguration` object that\n        determines when during text input the element returns a\n        `block_actions` payload.\n    focus_on_load: whether or not the email input will be set to autofocus\n        within the view object.\n    placeholder: a `TextType.PLAINTEXT` `Text` object that defines what text\n        will initially appear in the input field.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `ExternalMultiSelectMenu`

**Class**

```python
ExternalMultiSelectMenu(action_id: 'str', min_query_length: 'int | None' = None, initial_options: 'Option | list[Option] | OptionGroup | list[OptionGroup] | None' = None, confirm: 'ConfirmationDialogue | None' = None, max_selected_items: 'int | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"An interactive UI element that loads its options from an external data source,\n    allowing for a dynamic list of options.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#external_multi_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    min_query_length: minimum number of characters entered before the query\n        is dispactched (defaults to 3 if not provided).\n    initial_options: the [`Options`](/slackblocks/latest/reference/objects/#objects.Option)\n        to be initially selected when the element is first rendered.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the menu is used.\n    max_selected_items: the highest number of items from the list that\n        can be selected at one time.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `ExternalSelectMenu`

**Class**

```python
ExternalSelectMenu(action_id: 'str', initial_option: 'Option | OptionGroup | None' = None, min_query_length: 'int | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"A select menu interactive UI element, sourced with externally provided options.\n\nSee:\n    <https://api.slack.com/slackblocks/latest/reference/block-kit/block-elements#external_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_option: an\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) object that will be\n        initially selected when first presented to the user.\n    min_query_length: minimum number of characters entered before the query\n        is dispactched (defaults to 3 if not provided).\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `FileInput`

**Class**

```python
FileInput(action_id: 'str | None' = None, filetypes: 'str | list[str] | None' = None, max_files: 'int | None' = None) -> 'None'
```

<div className="api-docstring">{"An interactive element that allows users to upload files.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#file_input>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    filetypes: a list of file extensions (as strings) that will be accepted\n        for upload.\n    max_files: the maximum number of files that can be uploaded (between 1\n        and 10).\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `Image`

**Class**

```python
Image(alt_text: 'str' = ' ', image_url: 'str | None' = None, slack_file: 'SlackFile | None' = None) -> 'None'
```

<div className="api-docstring">{"An element to insert an image - this element can be used in section\nand context blocks only. If you want a block with only an image in it,\nyou're looking for the Image block.\n\nYou must provide either one of `image_url` or `slack_file`\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#image>.\n\nArgs:\n    alt_text: a plain-text-only summary of the content of the image.\n    image_url: a URL for a publicly hosted image (the user must provide\n        either `image_url` or `slack_file`).\n    slack_file: a [`SlackFile`](/slackblocks/latest/reference/objects/#objects.SlackFile)\n        (the user must provide either `image_url` or `slack_file`).\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation,\n        or both/neither of `image_url` and `slack_file` are provided."}</div>

## `NumberInput`

**Class**

```python
NumberInput(is_decimal_allowed: 'bool', action_id: 'str | None' = None, initial_value: 'str | None' = None, min_value: 'float | int | None' = None, max_value: 'float | int | None' = None, dispatch_action_config: 'DispatchActionConfiguration | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"This input elements accepts both integer and decimal numbers. For example,\n0.25, 5.5, and -10 are all valid input values.\n\nSee <https://api.slack.com/reference/block-kit/block-elements#number>.\n\nArgs:\n    is_decimal_allowed: whether to accept decimal values as input.\n    action_id: an identifier so the source of the action can be known.\n    initial_value: the initial value in the number input when it is loaded.\n    min_value: minimum accepted value for the input field.\n    max_value: maximum accepted value for the input field.\n    dispatch_action_config: a `DispatchActionConfiguration` object that\n        determines when during text input the element returns a\n        `block_actions` payload.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `OverflowMenu`

**Class**

```python
OverflowMenu(action_id: 'str', options: 'Option | list[Option]', confirm: 'ConfirmationDialogue | None' = None) -> 'None'
```

<div className="api-docstring">{"Context menu for additional options (think '...').\n\nSee <https://api.slack.com/reference/block-kit/block-elements#overflow>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    options: a list of\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) objects that will form\n        the content of the overflow menu.\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `PlainTextInput`

**Class**

```python
PlainTextInput(action_id: 'str', initial_value: 'str | None' = None, multiline: 'bool' = False, min_length: 'int | None' = None, max_length: 'int | None' = None, dispatch_action_config: 'DispatchActionConfiguration | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"A plain-text input, similar to the HTML <input> tag, creates a field where a user\ncan enter freeform data. It can appear as a single-line field or a larger text\narea using the multiline flag.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#input>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_value: the initial value in the plain-text input when it is loaded.\n    multiline: whether to accept multiple lines of input(defaults to false).\n    min_length: minimum number of characters to accept as input.\n    max_length: maximum number of characters to accept as input.\n    dispatch_action_config: a `DispatchActionConfiguration` object that\n        determines when during text input the element returns a\n        `block_actions` payload.\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `RadioButtonGroup`

**Class**

```python
RadioButtonGroup(action_id: 'str', options: 'list[Option]', initial_option: 'Option | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False) -> 'None'
```

<div className="api-docstring">{"A radio button group that allows a user to choose one item from a list of possible options.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#radio>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    options: a list of\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) objects that will form\n        the content of the radio button group.\n    initial_option: an\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) object that will be\n        initially selected when first presented to the user.\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `RichTextInput`

**Class**

```python
RichTextInput(action_id: 'str', initial_value: 'RichText | None' = None, dispatch_action_config: 'DispatchActionConfiguration | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"Allows users to enter formatted text in a WYSIWYG editor, similar to the Slack\n    messaging experience.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#rich_text_input>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_value: The initial value in the rich text input when it is loaded.\n    dispatch_action_config: a `DispatchActionConfiguration` object that\n        determines when during text input the element returns a\n        `block_actions` payload.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `StaticMultiSelectMenu`

**Class**

```python
StaticMultiSelectMenu(action_id: 'str', options: 'Option | list[Option]', option_groups: 'OptionGroup | list[OptionGroup] | None' = None, initial_options: 'Option | list[Option] | OptionGroup | list[OptionGroup] | None' = None, confirm: 'ConfirmationDialogue | None' = None, max_selected_items: 'int | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"The most basic form of select menu containing a static list of options\npassed in when defining the element.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#static_multi_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    options: a list of [`Options`](/slackblocks/latest/reference/objects/#objects.Option)\n        (max 100). Only one of `options` or `option_groups` must be\n        provided.\n    option_groups: a list of\n        [`OptionGroups`](/slackblocks/latest/reference/objects/#objects.OptionGroup)\n        (max 100). Only one of `options` or `option_groups` can be\n        provided.\n    initial_options: the [`Options`](/slackblocks/latest/reference/objects/#objects.Option)\n        to be initially selected when the element is first rendered.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the menu is used.\n    max_selected_items: the\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `StaticSelectMenu`

**Class**

```python
StaticSelectMenu(action_id: 'str', options: 'list[Option] | None' = None, option_groups: 'list[OptionGroup] | None' = None, initial_option: 'Option | OptionGroup | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"A simple select menu interactive UI element, with a static list of options passed in when\n    defining the element.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#static_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    options: a list of\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) objects that will form\n        the content of the menu (max 100).\n    option_groups: a list of\n        [`OptionGroups`](/slackblocks/latest/reference/objects/#objects.OptionGroup)\n        (max 100). Only one of `options` or `option_groups` can be\n        provided.\n    initial_option: an\n        [`Option`](/slackblocks/latest/reference/objects/#objects.Option) object that will be\n        initially selected when first presented to the user.\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `TimePicker`

**Class**

```python
TimePicker(action_id: 'str', initial_time: 'str | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None, timezone: 'str | None' = None) -> 'None'
```

<div className="api-docstring">{"An interactive UI element that allows users to select a time of day.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#timepicker>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_time:\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the input field is used.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n    timezone: a string in the IANA format, e.g. \"America/Chicago\".\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `URLInput`

**Class**

```python
URLInput(action_id: 'str', initial_value: 'str | None' = None, dispatch_action_config: 'DispatchActionConfiguration | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"An interactive UI element for collecting URL input from users.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#url>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_value: the text to populate the input field with when it\n        is first rendered.\n    dispatch_action_config: a `DispatchActionConfiguration` object that\n        determines when during text input the element returns a\n        `block_actions` payload.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `UserMultiSelectMenu`

**Class**

```python
UserMultiSelectMenu(action_id: 'str', initial_users: 'list[str] | None' = None, confirm: 'ConfirmationDialogue | None' = None, max_selected_items: 'int | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"This interactive UI element allows users to select multiple users visible\n    to the current user in the active workspace.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#users_multi_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_users: a list of string user IDs to be initially selected\n        when the element is first rendered.\n    confirm: a `ConfirmationDialogue` object that will be presented when\n        the menu is used.\n    max_selected_items: the highest number of items from the list that\n        can be selected at one time.\n    focus_on_load: whether or not the menu will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the menu when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `UserSelectMenu`

**Class**

```python
UserSelectMenu(action_id: 'str', initial_user: 'str | None' = None, confirm: 'ConfirmationDialogue | None' = None, focus_on_load: 'bool' = False, placeholder: 'TextLike | None' = None) -> 'None'
```

<div className="api-docstring">{"A select menu interactive UI element, sourced automatically with Slack users from the\n    current workspace visible to the current user.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#users_select>.\n\nArgs:\n    action_id: an identifier so the source of the action can be known.\n    initial_user: the single (string) user ID that will be initially selected\n        when first presented to the user.\n    confirm: a `ConfirmationDialogue` object that will be presented when an\n        option in the overflow menu is selected.\n    focus_on_load: whether or not the input will be set to autofocus\n        within the view object.\n    placeholder: a plain-text `Text` object (max 150 chars) that shows\n        in the input when it's initially rendered.\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>

## `WorkflowButton`

**Class**

```python
WorkflowButton(text: 'TextLike', workflow: 'Workflow | None' = None, style: 'ButtonStyleLike | None' = <ButtonStyle.DEFAULT: None>, accessibility_label: 'str | None' = None) -> 'None'
```

<div className="api-docstring">{"An interactive component that allows users to run a link trigger with\n    customizable inputs.\n\nSee: <https://api.slack.com/reference/block-kit/block-elements#workflow_button>.\n\nArgs:\n    text: the text content that will appear in the button.\n    workflow: a [`Workflow`](/slackblocks/latest/reference/objects/#objects.Workflow) object\n        that contains details about the workflow that will run when the\n        button is clicked.\n    style: one of `Default`, `Primary`, or `Danger`, determines the\n        visual style of the button. Consider using the `ButtonStyle`\n        object for this.\n    accessibility_label: a string label for longer descriptive text about\n        a button element. Used by screen readers (max 75 chars).\n\nThrows:\n    InvalidUsageError: if any of the provided arguments fail validation."}</div>
